@@ -25,6 +25,11 @@ our sub import(Str :$rootdir) {
     app.location = $rootdir || callframe(1).file.IO.dirname;
 }
 
+sub error(Pair $x) is export {
+    app.add_error: $x;
+    return $x;
+}
+
 sub get(Pair $x) is export {
     app.add_route: 'GET', $x;
     return $x;
